--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,13 +3,36 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content" android:orientation="vertical">
 
+<!--    <TextView-->
+<!--        android:id="@+id/text_url"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="80dp"-->
+<!--        android:gravity="center"-->
+<!--        android:background="#c0c7c759"-->
+<!--        android:textSize="20sp"-->
+<!--        android:text="2" />-->
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/text_view"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:gravity="center"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
         android:background="#c0c7c759"
-        android:textSize="20sp"
-        android:text="1" />
+        android:gravity="center"
+        android:text="1"
+        android:layout_weight="1"
+        android:textSize="20sp" />
 
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@android:color/holo_red_light"
+        android:gravity="center"
+        android:text="删除"
+        android:textColor="#DDFFFFFF"
+        android:textSize="20sp" />
+</LinearLayout>
 </FrameLayout>
