完成底部菜单栏和部分非核心功能

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -80,6 +80,7 @@
 <!--                app:layout_constraintVertical_bias="0.269" />-->
 <!--    </LinearLayout>-->
 
+
     <LinearLayout
             android:id="@+id/mainbarlt"
             android:orientation="vertical"
@@ -87,8 +88,9 @@
             app:layout_heightPercent="10%h"
             app:layout_widthPercent="100%w"
             android:layout_width="0dp"
-            android:layout_height="0dp">
-         <!--线-->
+            android:layout_height="0dp"
+            >
+        <!--线-->
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -102,20 +104,19 @@
             </View>
         </LinearLayout>
 
-         <!-- 底部栏-->
+        <!-- 底部栏-->
         <LinearLayout
+                android:id="@+id/mainbar"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="#FFFFFF"
-                android:orientation="horizontal"
-                >
+                android:background="@color/day"
+                android:orientation="horizontal">
 
 
             <com.balysv.materialripple.MaterialRippleLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@mipmap/transparen2"
                     app:mrl_rippleDuration="100"
                     app:mrl_rippleColor="#A9A9A9">
 
@@ -124,10 +125,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="@mipmap/direction_left"
+                        android:background="@mipmap/ic_arrow_left"
                         app:layout_marginLeftPercent="20%w"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8" />
+                        android:scaleX="0.25"
+                        android:scaleY="0.25" />
 
 
             </com.balysv.materialripple.MaterialRippleLayout>
@@ -137,7 +138,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@mipmap/transparent"
                     app:mrl_rippleDuration="100"
                     app:mrl_rippleColor="#A9A9A9">
 
@@ -146,18 +146,16 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="@mipmap/direction_right"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8" />
+                        android:background="@mipmap/ic_arrow_right"
+                        android:scaleX="0.3"
+                        android:scaleY="0.3" />
             </com.balysv.materialripple.MaterialRippleLayout>
-
 
 
             <com.balysv.materialripple.MaterialRippleLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@mipmap/transparent"
                     app:mrl_rippleDuration="100"
                     app:mrl_rippleColor="#A9A9A9">
 
@@ -167,8 +165,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@mipmap/ic_home"
-                        android:scaleX="0.7"
-                        android:scaleY="0.7" />
+                        android:scaleX="0.5"
+                        android:scaleY="0.5" />
             </com.balysv.materialripple.MaterialRippleLayout>
 
             <com.balysv.materialripple.MaterialRippleLayout
@@ -176,22 +174,21 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@mipmap/transparent"
                     app:mrl_rippleDuration="100"
                     app:mrl_rippleColor="#A9A9A9">
 
                 <TextView
-
                         android:gravity="center"
                         android:text="1"
                         android:textSize="23sp"
+                        android:textColor="@color/text_black"
                         android:id="@+id/pagebt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:background="@mipmap/page"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8" />
+                        android:scaleX="0.53"
+                        android:scaleY="0.53" />
             </com.balysv.materialripple.MaterialRippleLayout>
 
 
@@ -199,7 +196,6 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="@mipmap/transparent"
                     app:mrl_rippleDuration="100"
                     app:mrl_rippleColor="#A9A9A9">
 
@@ -208,15 +204,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="@mipmap/menu"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8" />
+                        android:background="@mipmap/menu_2"
+                        android:scaleX="0.32"
+                        android:scaleY="0.32" />
             </com.balysv.materialripple.MaterialRippleLayout>
 
 
         </LinearLayout>
 
+
     </LinearLayout>
+
 
     <!--预览时下图标-->
     <LinearLayout
