--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="text_white">#ffffff</color>
+    <color name="day">#ffffff</color>
+    <color name="text_black">#000000</color>
+    <color name="night">#000000</color>
+    <color name="gray">#515151</color>
 </resources>
