--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -3,7 +3,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#A4D3EE"
+        android:background="#ffffff"
         android:layout_margin="4dp">
 
     <!--    <TextView-->
@@ -35,7 +35,6 @@
                 android:id="@+id/history_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:background="#c0c7c759"
                 android:gravity="left"
                 android:text="1"
                 android:maxLength="10"
