--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="text_black">#000000</color>
     <color name="night">#000000</color>
     <color name="gray">#515151</color>
+    <color name="light_gray">#C9C9C9</color>
 </resources>
