--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -22,7 +22,9 @@
                 android:id="@+id/history_icon"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.7"/>
+                android:layout_weight="0.6"
+                android:scaleX="0.6"
+                android:scaleY="0.6"/>
 
         <LinearLayout
                 android:layout_width="0dp"
@@ -35,12 +37,12 @@
                 android:id="@+id/history_name"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:gravity="left"
+                android:gravity="center_vertical"
                 android:text="1"
                 android:maxLength="10"
                 android:singleLine="true"
                 android:layout_weight="2"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
         <TextView
                 android:id="@+id/history_url"
@@ -56,11 +58,11 @@
     <Button
             android:id="@+id/btn_delete"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:background="@android:color/holo_red_light"
+            android:layout_height="50dp"
+            android:background="@mipmap/ic_cancel"
             android:gravity="center"
-            android:layout_weight="1"
-            android:text="删除"
-            android:textColor="#DDFFFFFF"
-            android:textSize="20sp" />
+            android:layout_weight="0.5"
+            android:scaleX="0.5"
+            android:scaleY="0.45"
+ />
 </LinearLayout>
