--- a/app/src/main/res/layout/flagitem.xml
+++ b/app/src/main/res/layout/flagitem.xml
@@ -20,16 +20,27 @@
             android:gravity="center"
             android:text="1"
             android:layout_weight="1"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
+
+
+        <Button
+            android:id="@+id/flag_edit"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:background="@android:color/darker_gray"
+            android:gravity="center"
+            android:text="编辑"
+            android:textColor="#DDFFFFFF"
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/flag_delete"
-            android:layout_width="80dp"
+            android:layout_width="60dp"
             android:layout_height="80dp"
             android:background="@android:color/holo_red_light"
             android:gravity="center"
             android:text="删除"
             android:textColor="#DDFFFFFF"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
     </LinearLayout>
 </FrameLayout>
